# k8s-contract-provider

./: .gitignore  .gitmodules  .releaserc.json  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: release.yml  testing.yml
src/: certs.rs  main.rs
src/grpc/: mod.rs
src/storage/: kubernetes.rs  local.rs  mod.rs
