[package]
name = "k8s-contract-provider"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive", "env"] }
env_logger = "0.9.0"
hex = "0.4.3"
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
kube = "0.88.1"
log = "0.4.17"
openssl = "0.10.41"
openssl-sys = "0.9.75"
parse_duration = "2.1.1"
prost = "0.10.4"
prost-types = "0.10.1"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.5.0"

[build-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.7.2"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
