[package]
name = "k8s-contract-provider"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
hex = "0.4.3"
k8s-openapi = { version = "0.22.0", features = ["v1_22"] }
kube = "0.95.0"
log = "0.4.21"
openssl = "0.10.64"
openssl-sys = "0.9.102"
parse_duration = "2.1.1"
prost = "0.13.0"
prost-types = "0.13.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.12.0"

[build-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.12.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
